manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-docker
  namespace: damberg-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-docker
  template:
    metadata:
      labels:
        app: react-docker
    spec:
      containers:
      - name: react-docker
        image: simondamberg/damberg.dev
        imagePullPolicy: Always
        ports:
        - containerPort: 80
