manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
  namespace: damberg-dev
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - name: web
    port: 80
    targetPort: web
    protocol: TCP
    nodePort: 30000
