manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-damberg-dev
  namespace: damberg-dev
spec:
  ingressClassName: nginx
  rules:
  - host: damberg.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-nodeport
          servicePort: 80
